c2prj1_cards/grade.txt
Grading at Tue 10 Oct 2023 09:23:31 AM UTC
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:89:3: error: expected ‘,’ or ‘;’ before ‘if’
   89 |   if(2 <= cTemp) {
      |   ^~
cards.c:92:3: error: ‘else’ without a previous ‘if’
   92 |   else {
      |   ^~~~
Could not compile your card.c!

Overall Grade: FAILED
